--- a/source/catalog.html
+++ b/source/catalog.html
@@ -64,9 +64,9 @@
         <ul class="catalog__list product-list">
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png">
-              <source media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.png">
-              <img class="product-list__img" src="img/chicken-small-mobile@1x.jpg" alt="Фотография продукта Cat Energy PRO 500 г, вкус Курица">
+              <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
+              <img class="product-list__img" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Курица">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
@@ -89,9 +89,9 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png">
-              <source media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.png">
-              <img class="product-list__img product-list__img--big" src="img/chicken-big-mobile@1x.jpg" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Курица">
+              <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.png, img/chicken-big-tablet@2x.png 2x">
+              <img class="product-list__img product-list__img--big" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Курица">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
@@ -114,9 +114,9 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png">
-              <source media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.png">
-              <img class="product-list__img" src="img/fish-small-mobile@1x.jpg" alt="Фотография продукта Cat Energy PRO 500 г, вкус Рыба">
+              <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.png, img/fish-small-tablet@2x.png 2x">
+              <img class="product-list__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Рыба">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
@@ -139,9 +139,9 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png">
-              <source media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.png">
-              <img class="product-list__img product-list__img--big" src="img/fish-big-mobile@1x.jpg" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Рыба">
+              <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
+              <img class="product-list__img product-list__img--big" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Рыба">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
@@ -164,9 +164,9 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png">
-              <source media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.png">
-              <img class="product-list__img" src="img/buckwheat-small-mobile@1x.jpg" alt="Фотография продукта Cat Energy Slim 500 г, вкус Гречка">
+              <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.png, img/buckwheat-small-tablet@2x.png 2x">
+              <img class="product-list__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 500 г, вкус Гречка">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
@@ -189,9 +189,9 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png">
-              <source media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.png">
-              <img class="product-list__img product-list__img--big" src="img/buckwheat-big-mobile@1x.jpg" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Гречка">
+              <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-big-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.png, img/buckwheat-big-tablet@2x.png 2x">
+              <img class="product-list__img product-list__img--big" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Гречка">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy Slim 1000 г</h3>
@@ -214,9 +214,9 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png">
-              <source media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.png">
-              <img class="product-list__img" src="img/rice-small-mobile@1x.jpg" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Рис">
+              <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
+              <img class="product-list__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Рис">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy Slim 1000 г</h3>
@@ -321,9 +321,9 @@
           <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400" frameborder="1" allowfullscreen="true"></iframe>
           <a class="contacts__map-open" href="map.html">
             <picture>
-              <source media="(min-width: 1220px)" srcset="/img/bg-map-desktop@1x.png">
-              <source media="(min-width: 708px)" srcset="/img/bg-map-tablet@1x.png">
-              <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
+              <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+              <img class="contacts__map" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
             </picture>
           </a>
         </div>
