--- a/source/form.html
+++ b/source/form.html
@@ -170,9 +170,9 @@
           <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400" frameborder="1" allowfullscreen="true"></iframe>
           <a class="contacts__map-open" href="map.html">
             <picture>
-              <source media="(min-width: 1220px)" srcset="/img/bg-map-desktop@1x.png">
-              <source media="(min-width: 708px)" srcset="/img/bg-map-tablet@1x.png">
-              <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
+              <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+              <img class="contacts__map" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
             </picture>
           </a>
         </div>
