--- a/source/index.html
+++ b/source/index.html
@@ -66,9 +66,9 @@
           <p class="intro__slogan">Занялся собой? Займись котом!</p>
         </div>
         <picture>
-          <source media="(min-width: 1220px)" srcset="/img/index-can-desktop@1x.png">
-          <source media="(min-width: 708px)" srcset="/img/index-can-tablet@1x.jpg">
-          <img class="intro__img" src="/img/index-can-mobile@1x.png">
+          <source media="(min-width: 1220px)" srcset="img/index-can-desktop@1x.png, img/index-can-desktop@2x.png 2x">
+          <source media="(min-width: 708px)" srcset="img/index-can-tablet@1x.jpg, img/index-can-tablet@2x.jpg 2x">
+          <img class="intro__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x">
         </picture>
         <a class="intro__button" href="form.html">Подобрать программу</a>
         <div class="intro__desktop-substrate"></div>
@@ -95,19 +95,19 @@
           <h2 class="advantages__title">Как это работает</h2>
           <ul class="advantages__list">
             <li class="advantages__item">
-              <img class="advantages__img" src="img/advantage-leaf@1x.png" width="50" height="50" alt="Логотип элемента">
+              <img class="advantages__img" src="img/advantage-leaf@1x.png" srcset="img/advantage-leaf@2x.png 2x" width="50" height="50" alt="Логотип элемента">
               <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
             <li class="advantages__item">
-              <img class="advantages__img" src="img/advantage-powder@1x.png" width="50" height="50" alt="Логотип элемента">
+              <img class="advantages__img" src="img/advantage-powder@1x.png" srcset="img/advantage-powder@2x.png 2x" width="50" height="50" alt="Логотип элемента">
               <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
             <li class="advantages__item">
-              <img class="advantages__img" src="img/advantage-dining@1x.png" width="50" height="50" alt="Логотип элемента">
+              <img class="advantages__img" src="img/advantage-dining@1x.png" srcset="img/advantage-dining@2x.png 2x" width="50" height="50" alt="Логотип элемента">
               <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
             <li class="advantages__item">
-              <img class="advantages__img" src="img/advantage-clock@1x.png" width="50" height="50" alt="Логотип элемента">
+              <img class="advantages__img" src="img/advantage-clock@1x.png" srcset="img/advantage-clock@2x.png 2x" width="50" height="50" alt="Логотип элемента">
               <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
             </li>
           </ul>
@@ -134,16 +134,16 @@
               <ul class="example__slider-list">
                 <li class="example__slider-item example__photo-before">
                   <picture>
-                    <source media="(min-width: 1220px)" srcset="img/before-desktop@1x.png">
-                    <source media="(min-width: 708px)" srcset="img/before-tablet@1x.png">
-                    <img class="example__slider-image example__slider-image--before" src="img/before-mobile@1x.png" alt="Фото кота до программы">
+                    <source media="(min-width: 1220px)" srcset="img/before-desktop@1x.png, img/before-desktop@2x.png 2x">
+                    <source media="(min-width: 708px)" srcset="img/before-tablet@1x.png, img/before-tablet@2x.png 2x">
+                    <img class="example__slider-image example__slider-image--before" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Фото кота до программы">
                   </picture>
                 </li>
                 <li class="example__slider-item example__photo-after">
                   <picture>
-                    <source media="(min-width: 1220px)" srcset="img/after-desktop@1x.png">
-                    <source media="(min-width: 708px)" srcset="img/after-tablet@1x.png">
-                    <img class="example__slider-image example__slider-image--after" src="img/after-mobile@1x.png" alt="Фото кота после программы">
+                    <source media="(min-width: 1220px)" srcset="img/after-desktop@1x.png, img/after-desktop@2x.png 2x">
+                    <source media="(min-width: 708px)" srcset="img/after-tablet@1x.png, img/after-tablet@2x.png 2x">
+                    <img class="example__slider-image example__slider-image--after" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" alt="Фото кота после программы">
                   </picture>
                 </li>
               </ul>
@@ -170,9 +170,9 @@
           <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400" frameborder="1" allowfullscreen="true"></iframe>
           <a class="contacts__map-open" href="map.html">
             <picture>
-              <source media="(min-width: 1220px)" srcset="/img/bg-map-desktop@1x.png">
-              <source media="(min-width: 708px)" srcset="/img/bg-map-tablet@1x.png">
-              <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
+              <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+              <img class="contacts__map" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
             </picture>
           </a>
         </div>
