--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+
+    <script>
+      document.createElement( "picture" );
+    </script>
+    <script src="js/picturefill.js" async></script>
   </head>
   <body>
     <header class="page-header">
@@ -25,7 +31,7 @@
             <g>
               <path class="page-header__logo--black" d="M14.7,22.6C14.7,22.6,14.7,22.6,14.7,22.6c-1.3,0-2.3-1.4-2.3-1.4c0-0.1,0-0.2,0-0.2c0.1,0,0.2,0,0.2,0c0,0,1,1.3,2.1,1.3&#10;    c0,0,0,0,0,0c0.6,0,1.1-0.3,1.6-1l0.1-0.2l0.1,0.2c0,0,0.4,0.8,1,0.8c0.5,0,1.1-0.4,1.6-1.3c0-0.1,0.1-0.1,0.2,0&#10;    c0.1,0,0.1,0.1,0,0.2c-0.6,1-1.3,1.4-1.9,1.4c-0.6,0-0.9-0.5-1.1-0.8C15.9,22.3,15.3,22.6,14.7,22.6z"/>
             </g>
-            <path class="page-header__logo--red" d="M26.2,18.9c0,0-2.5,2.2-5.1,5.2S15.9,29,15.9,29c-0.2-0.5-1.6-1.5-1.6-1.5s-3.1-2.1-5.2-3.8&#10;  c-1.2-1-2.3-2.2-3.1-3c-0.3,0-1.1-0.1-2-0.1c4.7,7,12,8.8,12,8.8c0.9-0.1,3.3-1.9,5.1-3.3c1.8-1.4,4.8-4.5,5.9-5.9&#10;  c0.6-0.7,0.9-1.4,1.1-2C27,18.6,26.2,18.9,26.2,18.9z"/>
+              <path class="page-header__logo--red" d="M26.2,18.9c0,0-2.5,2.2-5.1,5.2S15.9,29,15.9,29c-0.2-0.5-1.6-1.5-1.6-1.5s-3.1-2.1-5.2-3.8&#10;  c-1.2-1-2.3-2.2-3.1-3c-0.3,0-1.1-0.1-2-0.1c4.7,7,12,8.8,12,8.8c0.9-0.1,3.3-1.9,5.1-3.3c1.8-1.4,4.8-4.5,5.9-5.9&#10;  c0.6-0.7,0.9-1.4,1.1-2C27,18.6,26.2,18.9,26.2,18.9z"/>
             <g transform="matrix(1, 0, 0, 1, 90, 10.200001)">
               <path class="page-header__logo--black" d="M1.2,16.6c-0.8-1-1.2-2.5-1.2-4.4V5.9c0-1.9,0.4-3.4,1.2-4.4C2,0.5,3.4,0,5.4,0c1.9,0,3.2,0.4,4,1.3&#10;    c0.8,0.9,1.2,2.1,1.2,3.8v1.5H6.6V4.8c0-0.7-0.1-1.2-0.2-1.6C6.3,2.9,5.9,2.7,5.4,2.7S4.4,2.9,4.3,3.3C4.1,3.7,4,4.2,4,4.9v8.3&#10;    c0,0.7,0.1,1.2,0.3,1.6c0.2,0.4,0.5,0.6,1.1,0.6c0.5,0,0.9-0.2,1-0.6c0.2-0.4,0.2-0.9,0.2-1.6v-1.8h3.9v1.5c0,1.6-0.4,2.9-1.2,3.9&#10;    c-0.8,0.9-2.1,1.4-4,1.4C3.4,18.1,2,17.6,1.2,16.6z"/>
               <path class="page-header__logo--black" d="M15.2,0.2h4.5L23,17.8h-3.6l-0.6-3.7h-2.6l-0.6,3.7h-3.7L15.2,0.2z M18.4,11.8l-0.9-6.9l-0.9,6.9H18.4z"/>
@@ -65,8 +71,8 @@
           <li class="product-list__item">
             <picture>
               <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
-              <img class="product-list__img" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Курица">
+              <source media="(min-width: 708px)" srcset="/img/chicken-small-tablet@1x.png, /img/chicken-small-tablet@2x.png 2x">
+              <img class="product-list__img product-list__img--chicken" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Курица">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
@@ -91,7 +97,7 @@
             <picture>
               <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
               <source media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.png, img/chicken-big-tablet@2x.png 2x">
-              <img class="product-list__img product-list__img--big" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Курица">
+              <img class="product-list__img product-list__img--big product-list__img--big-chicken" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Курица">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
@@ -323,7 +329,7 @@
             <picture>
               <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
               <source media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
-              <img class="contacts__map" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
+              <img class="contacts__map" width="320" height="362" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
             </picture>
           </a>
         </div>
@@ -414,21 +420,6 @@
         </div>
       </div>
     </footer>
-    <script>
-      var navMain = document.querySelector('.main-nav');
-      var navButton = document.querySelector('.main-nav__button');
-
-      navMain.classList.remove('main-nav--nojs');
-
-      navButton.addEventListener('click', function() {
-        if (navMain.classList.contains('main-nav--closed')) {
-          navMain.classList.remove('main-nav--closed');
-          navMain.classList.add('main-nav--opened');
-        } else {
-          navMain.classList.add('main-nav--closed');
-          navMain.classList.remove('main-nav--opened');
-        }
-      });
-    </script>
+    <script src="js/main-nav.js"></script>
   </body>
 </html>
