--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+
+    <script>
+      document.createElement( "picture" );
+    </script>
+    <script src="js/picturefill.js" async></script>
   </head>
   <body>
     <header class="page-header">
@@ -172,7 +178,7 @@
             <picture>
               <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
               <source media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
-              <img class="contacts__map" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
+              <img class="contacts__map" width="320" height="362" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
             </picture>
           </a>
         </div>
@@ -263,21 +269,6 @@
         </div>
       </div>
     </footer>
-    <script>
-        var navMain = document.querySelector('.main-nav');
-        var navButton = document.querySelector('.main-nav__button');
-
-        navMain.classList.remove('main-nav--nojs');
-
-        navButton.addEventListener('click', function() {
-          if (navMain.classList.contains('main-nav--closed')) {
-            navMain.classList.remove('main-nav--closed');
-            navMain.classList.add('main-nav--opened');
-          } else {
-            navMain.classList.add('main-nav--closed');
-            navMain.classList.remove('main-nav--opened');
-          }
-        });
-    </script>
+    <script src="js/main-nav.js"></script>
   </body>
 </html>
