--- a/source/catalog.html
+++ b/source/catalog.html
@@ -76,7 +76,7 @@
 
               <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
               <source media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-              <img class="product-list__img product-list__img--chicken" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Курица">
+              <img class="product-list__img" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Курица">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
@@ -105,7 +105,7 @@
 
               <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
               <source media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-              <img class="product-list__img product-list__img--big product-list__img--big-chicken" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Курица">
+              <img class="product-list__img product-list__img--big" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Курица">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
@@ -134,7 +134,7 @@
 
               <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
               <source media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-              <img class="product-list__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Рыба">
+              <img class="product-list__img" width="140" height="144" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Рыба">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
@@ -163,7 +163,7 @@
 
               <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
               <source media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-              <img class="product-list__img product-list__img--big" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Рыба">
+              <img class="product-list__img product-list__img--big" width="140" height="144" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Рыба">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
@@ -192,7 +192,7 @@
 
               <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
               <source media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-              <img class="product-list__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 500 г, вкус Гречка">
+              <img class="product-list__img" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 500 г, вкус Гречка">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
@@ -221,7 +221,7 @@
 
               <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
               <source media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-              <img class="product-list__img product-list__img--big" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Гречка">
+              <img class="product-list__img product-list__img--big" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Гречка">
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy Slim 1000 г</h3>
@@ -250,10 +250,10 @@
 
               <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
               <source media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-              <img class="product-list__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Рис">
+              <img class="product-list__img" width="140" height="144" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Рис">
             </picture>
             <div class="product-list__wrapper">
-              <h3 class="product-list__title">Cat Energy Slim 1000 г</h3>
+              <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
               <table class="product-list__table" border="0">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
